--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,13 +6,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".fragment.IntroActivityFragment"
-    tools:showIn="@layout/activity_intro">
+    tools:context="com.appspace.evyalert.activity.MainActivity$PlaceholderFragment">
 
-    <ImageView
+    <TextView
+        android:id="@+id/section_label"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@drawable/ic_app"/>
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
