--- a/app/src/main/res/layout/holder_event.xml
+++ b/app/src/main/res/layout/holder_event.xml
@@ -2,7 +2,7 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginStart="112dp"
+            android:layout_marginStart="96dp"
             android:layout_marginTop="8dp"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium" />
