--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.appspace.evyalert.activity.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/actionFilters"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_filter_list_white_24dp"
+        android:title="@string/action_filters"
+        app:showAsAction="always" />
 </menu>
