--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,14 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="GreyTextLabel" parent="TextAppearance.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/grey_400</item>
+        <item name="android:textSize">18sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/grey_400</item>
+        <item name="colorControlNormal">@color/grey_400</item>
+        <item name="colorControlActivated">@color/grey_400</item>
+    </style>
+
 </resources>
