--- a/app/src/main/res/layout/holder_event.xml
+++ b/app/src/main/res/layout/holder_event.xml
@@ -29,5 +29,7 @@
             android:layout_marginTop="8dp"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <include layout="@layout/content_holder_event_comment" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
