--- a/app/src/main/res/layout/holder_event_with_image.xml
+++ b/app/src/main/res/layout/holder_event_with_image.xml
@@ -37,5 +37,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp" />
+
+        <include layout="@layout/content_holder_event_comment" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
