--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
 
     <color name="grey_400">#BDBDBD</color>
     <color name="grey_800">#424242</color>
+
+    <color name="warning_color">#ffa726</color>
 </resources>
