--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="GreyTextLabel" parent="TextAppearance.AppCompat">
+    <style name="GreyTextLabel" parent="Widget.Design.TextInputLayout">
         <!-- Hint color and label color in FALSE state -->
         <item name="android:textColorHint">@color/grey_400</item>
         <item name="android:textSize">18sp</item>
