--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.13" />
 
     <TextView
-        android:text="TextView"
+        android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
